<resources>
    <string name="app_name">janmitr</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="welcome_to_janmitr">Welcome to Janmitr</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


    <string-array name="flag_name">
        <item>Regular</item>
        <item>Urgent</item>
        <item>Emergency</item>
    </string-array>


</resources>