<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/janmitr_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_janmitr"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintEnabled="true"
            app:boxBackgroundMode="outline"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email_field">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_marginTop="10dp"
                android:layout_width="298dp"
                android:layout_height="49dp"
                android:drawableStart="@drawable/ic_baseline_account_circle"
                android:drawablePadding="10dp"
                android:elevation="3dp"

                android:padding="15dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_field">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_marginTop="10dp"
                android:layout_width="298dp"
                android:layout_height="49dp"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="10dp"
                android:elevation="3dp"

                android:inputType="textPassword"
                android:padding="15dp"
                android:layout_gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:onClick="clickOnLogin"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:ignore="UsingOnClickInXml" />

</LinearLayout>